# EchoVoice

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  RELEASE_NOTES.md
.cargo/: config.toml
.dev/: PLAN.md  README.md  WINDOWS_DEV_GUIDE.md
.dev/architecture/: data-flow.md  multi-platform.md  system-overview.md  windows-remote-dev.md
.dev/decisions/: adr-001-tech-stack.md  adr-002-model-selection.md  adr-003-multi-platform.md
.dev/docs/: ARCHITECTURE.md  GIT-WORKFLOW.md
.dev/modules/asr/: README.md  design.md  interface.md
.dev/modules/audio/: README.md  design.md  interface.md
.dev/modules/config/: README.md  design.md  interface.md
.dev/modules/floating/: README.md  design.md  implementation.md  interface.md
.dev/modules/hotkey/: README.md  design.md  interface.md
.dev/modules/llm/: README.md  design.md  interface.md  prompt-engineering.md
.dev/modules/settings/: README.md  design.md  interface.md
.dev/modules/tray/: README.md  design.md  interface.md
.dev/specs/: API.md
.github/workflows/: build.yml
crates/asr/: Cargo.toml
crates/asr/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  watcher.rs
crates/floating/: Cargo.toml
crates/floating/src/: lib.rs  macos.rs  windows.rs
crates/hotkey/: Cargo.toml
crates/hotkey/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: enigo.rs  main.rs
desktop/src/asr/: mod.rs
desktop/src/audio/: mod.rs
desktop/src/hotkey/: mod.rs
desktop/src/llm/: mod.rs
desktop/src/tray/: mod.rs
i18n/: README.en.md
scripts/: build-dmg.sh  build-msi.bat  build-msi.sh  build.sh  download-models.ps1  download-models.sh  echovoice.wxs
src/: main.rs  pipeline.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  settings.html
