[package]
name = "echovoice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echovoice"
path = "src/main.rs"

[dependencies]
echovoice-audio = { path = "crates/audio" }
echovoice-asr = { path = "crates/asr" }
echovoice-llm = { path = "crates/llm" }
echovoice-config = { path = "crates/config" }
echovoice-hotkey = { path = "crates/hotkey" }
echovoice-tray = { path = "crates/tray" }
anyhow = "1.0"

[workspace]
members = [
    "crates/audio",
    "crates/asr",
    "crates/llm",
    "crates/config",
    "crates/hotkey",
    "crates/tray",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"