[package]
name = "echovoice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echovoice"
path = "src/main.rs"

[dependencies]
echovoice-audio = { path = "crates/audio" }
echovoice-asr = { path = "crates/asr" }
echovoice-llm = { path = "crates/llm" }
echovoice-config = { path = "crates/config" }
echovoice-hotkey = { path = "crates/hotkey" }
echovoice-output = { path = "crates/output" }
anyhow = "1.0"
arboard = "3"
rdev = "0.5"

[workspace]
members = [
    "crates/audio",
    "crates/asr",
    "crates/llm",
    "crates/config",
    "crates/hotkey",
    "crates/output",
    "crates/floating",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"